# cvxportfolio

./: .buildinfo  .bumpversion.cfg  .dockerignore  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.txt  BasicExample.ipynb  CODE_OF_CONDUCT.md  Constraints.ipynb  ConstraintsExample.ipynb  DataEstimatesRiskModel.ipynb  Dockerfile  DownloadData.ipynb  FactorModelTest.ipynb  HelloWorld.ipynb  LICENSE  LICENSE.txt  Makefile  MultiPeriodExample.ipynb  MultiPeriodOptimization.ipynb  MultiPeriodOptimizationNew.ipynb  PIP.md  PortfolioSimulation.ipynb  README.md  README.rst  SinglePeriodOpt.ipynb  SinglePeriodOptimization.ipynb  SinglePeriodOptimizationExample.ipynb  SolutionTime.ipynb  TODOs.md  TODOs_ROADMAP.rst  basic_example.ipynb  bumpversion.py  create_kernel.sh  datarisk_model.h5  genindex.html  git-split.sh  git_split.sh  (+25 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: binder.yml  book.yml  build.yml  cibuildwheel.yml  coveralls.yml  test.yml
book/: _config.xml  _config.yml  _toc.yml
book/docs/: HelloWorld.ipynb  RealTimeOptimization.ipynb  SinglePeriodOptimizationLinTCost.ipynb  examples.md  index.md
conda-recipe/: conda_build_config.yaml  meta.yaml
continuous_integration/: build_and_deploy.py  deploy_script.sh  install.sh  test_script.sh  versiongetter.py
cvx_portfolio/: __init__.py  constraints.py  costs.py  expression.py  policies.py  policy.py  result.py  returns.py  risks.py  simulator.py
cvx_portfolio/data/: __init__.py  download.py  factor_model.py  generator.py
cvx_portfolio/policy/: __init__.py  base_policy.py  basic.py  constraints.py  multi_period.py  single_period.py
cvx_portfolio/tests/: __init__.py  base_test.py  test_models.py  test_optimizer.py  test_portfolio.py  test_simulator.py  test_what_if.py
cvx_portfolio/utils/: __init__.py  plotting.py
cvxportfolio/: __init__.py  benchmark.py  cache.py  constraints.py  costs.py  data.py  errors.py  estimator.py  expression.py  forecast.py  hyperparameters.py  legacy.py  policies.py  result.py  returns.py  risks.py  simulator.py  utils.py
cvxportfolio/constraints/: __init__.py  base_constraints.py  constraints.py
cvxportfolio/data/: __init__.py  market_data.py  symbol_data.py  user_agents.json
cvxportfolio/tests/: __init__.py  __main__.py  base.py  base_test.py  returns.csv  sample_data.pickle  sigmas.csv  test_constraints.py  test_costs.py  test_data.py  test_estimator.py  test_forecast.py  test_hyperparameters.py  test_integration.py  test_models.py  test_optimizer.py  test_policies.py  test_result.py  test_returns.py  test_risks.py  test_simulator.py  test_utils.py  test_what_if.py  volumes.csv
cvxportfolio/utils/: __init__.py  data_management.py  locate_values.py  market_data.py  plotting.py  risk_model.py
data/: mpo_pareto_results.csv  risk_model.h5  spo_pareto_results.csv
doc_source/: Makefile  conf.py
doc_source/doctrees/: environment.pickle  index.doctree
docs/: .buildinfo  CNAME  Makefile  api.rst  conf.py  constraints.rst  contributing.rst  costs.rst  data.rst  estimators.rst  examples.html  examples.rst  forecasts.rst  genindex.html  hello_world.rst  index.html  index.md  index.rst  internals.rst  manual.rst  objective_terms.rst  objects.inv  optimization_policies.rst  policies.rst  py-modindex.html  quickstart.rst  requirements.txt  result.rst  returns.rst  risks.rst  search.html  searchindex.js  simple_policies.rst  simulator.rst
docs/API/: index.md
docs/_sources/: index.txt
docs/_static/: alabaster.css  basic.css  case_shiller_output.txt  data_cleaning_output.txt  doctools.js  dow30_example_output.txt  dow30_output.txt  etfs_output.txt  hello_world_output.txt  jquery-3.1.0.js  market_neutral_nocosts_output.txt  market_neutral_output.txt  pygments.css  searchtools.js  timing_output.txt  underscore-1.3.1.js  user_provided_forecasters_output.txt  websupport.js
docs/citing/: index.html  index.md
docs/doctrees/: environment.pickle  index.doctree
docs/documentation/: index.html  index.md
docs/examples/: case_shiller.rst  data_cleaning.rst  dow30.rst  etfs.rst  index.html  index.md  market_neutral.rst  market_neutral_nocosts.rst  paper_examples.rst  risk_models.rst  timing.rst  universes.rst  user_provided_forecasters.rst
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/install/: index.html  index.md
docs/intro/: index.html  index.md
docs/license/: index.html  index.md  index.rst
docs/notebooks/: HelloWorld.html
docs/source/: Makefile  conf.py  index.rst
docs_OLD/: objects.inv  py-modindex.html  search.html  searchindex.js
docs_OLD/documentation/: index.html
docs_OLD/license/: index.html
docs_source/: .gitignore  conf.py  index.rst  make_script
docs_source/citing/: index.rst
docs_source_OLD/: conf.py
examples/: DataEstimatesRiskModel.ipynb  DataEstimatesRiskModel.py  HelloWorld.ipynb  MultiPeriodOptimization.ipynb  MultiPeriodOptimization.py  MultiPeriodTCostOptimization.ipynb  PortfolioSimulation.ipynb  PortfolioSimulation.py  PortfolioSingleStockLSTM.ipynb  RankAndSPO.ipynb  RankAndSPO.py  RealTimeOptimization.ipynb  RealTimeOptimization.py  SinglePeriodOptimization.ipynb  SinglePeriodOptimization.py  SinglePeriodOptimizationLinTCost.ipynb  SinglePeriodOptimizationLinTCost.py  SolutionTime.ipynb  SolutionTime.py  __init__.py  case_shiller.py  data_cleaning.py  dow30.py  dow30_example.py  etfs.py  etfs_example.py  hello_world.py  indicator_based_leverage_portfolio.py  leverage_indicator_based_portfolio.py  leverage_margin_portfolio_bid_ask_modelling.py  leverage_strategy.py  margin_loan_jpy_example.py  market_neutral.py  market_neutral_nocosts.py  multi_period_tcost_optimization.py  multiperiod_tcost.py  r_hat.csv  r_hat_fx.csv  regression_covariance.py  risk_models.py  (+5 more)
na_trader/: pyvenv.cfg
tests/: __init__.py  base_test.py  conftest.py  test_backtest.py  test_constraints.py  test_costs.py  test_data.py  test_estimator.py  test_models.py  test_new_simulator.py  test_optimizer.py  test_policies.py  test_returns.py  test_risks.py  test_simulator.py  test_utils.py  test_what_if.py
(+106 files in other folders)
